--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@creativebulma/bulma-badge": "^1.0.1",
+    "@fontsource/material-icons": "^4.2.1",
     "bulma": "^0.9.2",
     "gatsby": "^3.0.1",
     "gatsby-plugin-feed": "^3.0.0",
